--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" output="bintests" path="srctests"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry exported="true" kind="lib" path="lib/lwjgl.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/lwjgl.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Gamelib/lib/native/windows"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="lib/batik/batik-bridge.jar"/>
 	<classpathentry kind="lib" path="lib/batik/batik-css.jar"/>
 	<classpathentry kind="lib" path="lib/batik/batik-dom.jar"/>
