--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="lib" path="lib/batik/batik-awt-util.jar"/>
 	<classpathentry kind="lib" path="lib/batik/batik-codec.jar"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/pl.shockah.json"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/pl.shockah"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
