--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,7 @@
     	<delete file="gamelib.jar"/>
         <jar destfile="gamelib.jar" filesetmanifest="mergewithoutmain">
             <fileset dir="bin"/>
+        	<fileset dir="../pl.shockah/bin"/>
         	<fileset dir="../pl.shockah.json/bin"/>
         </jar>
     </target>
